[gd_scene load_steps=7 format=3 uid="uid://dmc41ngdt2toi"]

[ext_resource type="Script" path="res://interface/action/action_button.gd" id="1_6cvcl"]
[ext_resource type="Texture2D" uid="uid://denghumb3wdyo" path="res://interface/action/default_hover_texture.tres" id="2_j088m"]
[ext_resource type="Texture2D" uid="uid://bmfvf1jms87n4" path="res://assets/white.20x20.png" id="2_smk60"]
[ext_resource type="PackedScene" uid="uid://dowdb8xwgxtyo" path="res://interface/action/action_tooltip.tscn" id="4_benr2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5q4e"]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kixbj"]
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="ActionButton" type="PanelContainer"]
clip_children = 1
offset_right = 32.0
offset_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_q5q4e")
script = ExtResource("1_6cvcl")
hover_texture = ExtResource("2_j088m")

[node name="DefaultContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Button" type="TextureButton" parent="."]
layout_mode = 2
shortcut_in_tooltip = false
ignore_texture_size = true
stretch_mode = 0

[node name="HoverTexture" type="TextureRect" parent="Button"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_kixbj")
expand_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.01
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("2_smk60")
tint_progress = Color(0.117647, 0.117647, 0.117647, 0.768627)

[node name="Time" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Keybind" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
vertical_alignment = 2

[node name="Timer" type="Timer" parent="Button"]
wait_time = 1.5
one_shot = true

[node name="ActionTooltip" parent="Button" instance=ExtResource("4_benr2")]
visible = false
layout_mode = 0
offset_top = -15.0
offset_bottom = 22.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Button/Timer" to="." method="_on_timer_timeout"]
